@@ -308,7 +308,13 @@ class WorkingTree(Tree):
         
         for pat in self.get_ignore_list():
             if '/' in pat:
-                if fnmatch.fnmatchcase(filename, pat):
+                # as a special case, you can put ./ at the start of a pattern;
+                # this is good to match in the top-level only;
+                if pat[:2] == './':
+                    newpat = pat[2:]
+                else:
+                    newpat = pat
+                if fnmatch.fnmatchcase(filename, newpat):
                     return pat
             else:
                 if fnmatch.fnmatchcase(splitpath(filename)[-1], pat):
